# petfinder

./: .gitignore  README.md  pyproject.toml  run_exp.ipynb
petfinder/: baseline.py  main.py  run_exp.ipynb  submit.ipynb
petfinder/conf/: config.yaml
petfinder/conf/data/: default.yaml  kaggle.yaml
petfinder/conf/datamodule/: default.yaml
petfinder/conf/general/: default.yaml
petfinder/conf/model/: default.yaml
petfinder/conf/trainer/: default.yaml
petfinder/conf/wandb/: default.yaml
petfinder/experiment/: kaggle.yaml
petfinder/lr_schedulers/: lr_warmup.py
petfinder/notebooks/: data_eda_v0.ipynb
