[tool.poetry]
name = "petfinder"
version = "0.1.0"
description = ""
authors = ["near129"]

[tool.poetry.dependencies]
python = ">=3.7.1 <=3.9"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
pandas = "^1.3.3"
plotly = "^5.3.1"
torch = "^1.10.0"
torchvision = "^0.11.1"
pytorch-lightning = "^1.5.7"
scikit-learn = "^1.0"
timm = "^0.4.12"
lightgbm = "^3.2.1"
hydra-core = "1.1.1"
kaggle = "^1.5.12"
pandas-profiling = "^3.1.0"
ipyplot = "^1.1.0"
wandb = "^0.12.6"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
